--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,23 @@
 #################################################
 ###                    LIB                    ###
 #################################################
-libVersion=0.9.0
+libVersion=0.10.0-beta.5
 libGroup=com.github.alorma
 
+#################################################
+###                   POM                     ###
+#################################################
+pomName=Compose Debug Drawer
+pomDescription=Compose Debug Drawer
+pomUrl=http://github.com/alorma/compose-debug-drawer
+pomLicenseName=The Apache License, Version 2.0
+pomLicenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+pomDeveloperId=alorma
+pomDeveloperName=Bernat Borrás
+pomDeveloperEmail=bernatbor15@gmail.com
+pomSmcUrl=https://github.com/alorma/compose-debug-drawer
+pomSmcConnection=scm:git:git@github.com:alorma/compose-debug-drawer.git
+pomSmcDeveloperConnection=scm:git:git@github.com:alorma/compose-debug-drawer.git
 #################################################
 ###                  Gradle                   ###
 #################################################
